src/qrack_system/bindings.rs

extern "C" {
    pub fn LDA(
        sid: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn ADC(
        sid: uintq,
        s: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn SBC(
        sid: uintq,
        s: uintq,
        ni: uintq,
        qi: *mut uintq,
        nv: uintq,
        qv: *mut uintq,
        t: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn Hash(sid: uintq, n: uintq, q: *mut uintq, t: *mut ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn TrySeparate1Qb(sid: uintq, qi1: uintq) -> bool;
}
extern "C" {
    pub fn TrySeparate2Qb(sid: uintq, qi1: uintq, qi2: uintq) -> bool;
}
extern "C" {
    pub fn TrySeparateTol(sid: uintq, n: uintq, q: *mut uintq, tol: f64) -> bool;
}
extern "C" {
    pub fn SetReactiveSeparate(sid: uintq, irs: bool);
}
extern "C" {
    pub fn SetTInjection(sid: uintq, iti: bool);
}
extern "C" {
    pub fn TimeEvolve(
        sid: uintq,
        t: f64,
        n: uintq,
        teos: *mut _QrackTimeEvolveOpHeader,
        mn: uintq,
        mtrx: *mut f64,
    );
}
